# solo-any-handle

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
cmake/: soloAnyHandleConfig.cmake.in
docs/: HISTORY.txt  SoloAnyHandleIndex.md
include/solo/anys/handles/: __obsolete__any_handle_cast_or_throw.hpp  __obsolete__any_handle_comparison_operators.hpp  __obsolete__any_handle_mutable_cast.hpp  __obsolete__any_handle_mutable_cast_or_throw.hpp  __obsolete__any_type_index_comparison_operators.hpp  __obsolete__make_any_handle_mutable.hpp  __obsolete__make_any_handle_mutable_ex.hpp  any_handle.hpp  any_handle_cast.hpp  any_handle_cast_or_throw.hpp  any_handle_comparison_operators.hpp  any_handle_core_package.hpp  any_handle_library_version.hpp  any_handle_mutable_cast.hpp  any_handle_mutable_cast_or_throw.hpp  any_handle_package.hpp  any_type_index.hpp  any_type_index_comparison_operators.hpp  make_any_handle.hpp  make_any_handle_ex.hpp  make_any_handle_mutable.hpp  make_any_handle_mutable_ex.hpp  make_any_type_index.hpp  mutability.hpp
include/solo/anys/handles/details/: __obsolete__any_handle_builder_t.hpp  __obsolete__any_type_index_builder_t.hpp  __obsolete__any_type_info.hpp  __obsolete__any_type_info_instance_t.hpp  __obsolete__empty_any_type_info_instance.hpp  __obsolete__select_any_type_info_instance_t.hpp  __obsolete__throw_any_handle_cast_exception_t.hpp  any_handle_builder_t.hpp  any_type_index_builder_t.hpp  any_type_info.hpp  any_type_info_instance_t.hpp  empty_any_type_info_instance.hpp  select_any_type_info_instance_t.hpp  throw_any_handle_cast_exception_t.hpp
include/solo/anys/handles/errors/: __obsolete__any_handle_cast_error.hpp  __obsolete__any_handle_cast_error_helpers.hpp  any_handle_cast_errc.hpp  any_handle_cast_error.hpp
include/solo/anys/handles/exceptions/: __obsolete__bad_any_handle_cast.hpp  bad_any_handle_cast.hpp
include/solo/anys/handles/outcomes/: __obsolete__any_handle_cast_result.hpp  any_handle_cast_result.hpp
include/solo/anys/handles/pragmas/: disables_warnings.hpp
include/solo/anys/handles/testing/printing/: any_handle_boost_test_outputters.hpp  any_handle_testing_outputters.hpp
tests/: CMakeLists.txt  solo_any_handle_boost_testsuite_main.cpp
tests/libs/: any_handle_boost_testsuite.cpp  any_handle_cast_with_exception_boost_testsuite.cpp  any_handle_cast_with_result_boost_testsuite.cpp  any_handle_ex_boost_testsuite.cpp  any_handle_more_boost_tests.cpp  any_handle_testsuite_types.hpp
